# ai-summarize-document

./: LICENSE  README.md  app.py  pyproject.toml
data/: article.txt
main/: customized_exceptions.py  document.py  llm_as_judge.py  metrics.py  report.py  requirements.py  summarizer.py
notebooks/: choose_the_best_llm_model.ipynb  customized_summarizer_and_evaluators.ipynb  select_the_best_among_multiple_candidates.ipynb
prompts/templates/: extract_main_topic_template.j2  judge_report_completeness_template.j2  judge_statement_correctness_template.j2  summarize_document_template.j2
templates/: index.html
test/: test_document.py  test_llm_as_judge.py  test_metrics.py  test_report.py  test_requirements.py  test_summarizer.py
tests/: test_document.py
